    * FIX: Fixed auth problem when following logwatch icon links while using
      the form based auth
    * FIX: Fix problem with Umlaut in contact alias
    * FIX: Creating auth.php file on first login dialog based login to ensure
      it exists after login when it is first needed
    * Dashboard: link problem views to *unhandled* views (this was
      inconsistent)

    Mobile:
    * Improved sorting of views in main page 
    * Fix: Use all the availiable space in header
    * Fix: Navigation with Android Hardwarekeys now working
    * Fix: Links to pnp4nagios now work better
    * Fix: Host and Service Icons now finger friendly
    * Fix: Corrected some buildin views

    WATO:
    * Removed IP-Address attribute from folders
    * Supporting localized tag titles
    * Using Username as default value for full names when editing users
    * Snapshot/Factory Reset is possible even with a broken config
    * Added error messages to user edit dialog to prevent notification problems
      caused by incomplete configuration
    * Activate Changes: Wato can also reload instead of restarting nagios
    * Replication: Can now handle replication sites which use the form based auth
    * Replication: Added option to ignore problems with the ssl certificates
                   used in ssl secured replications
    * FIX: Fixed missing folders in "move to" dropdown fields
    * FIX: Fixed "move to target folders" after CSV import
    * FIX: Fixed problem with duplicate extra_buttons when using the i18n of multiisite
    * FIX: Fixed problem with duplicate permissions when using the i18n of multiisite
    * FIX: Writing single host_contactgroups rules for each selected
      contactgroup in host edit dialog
    * FIX: Fixed wrong folder contacgroup related permissions in auth.php api
    * FIX: Fixed not up-to-date role permission data in roles_saved hook

    BI:
    * improve doc/treasures/check_bi_local.py: local check that creates